crates/contextdb-core/tests/fixtures/compile_fail/rowid_into_lsn.rs
use contextdb_core::{Lsn, RowId};

fn main() {
    let rid = RowId(1);
    let _lsn: Lsn = rid;
}
