crates/contextdb-core/tests/fixtures/compile_fail/rowid_into_lsn.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/rowid_into_lsn.rs:5:21
  |
5 |     let _lsn: Lsn = rid;
  |               ---   ^^^ expected `Lsn`, found `RowId`
  |               |
  |               expected due to this
